--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
-textarea {
-    resize: none;
-  }
-
-
+#text-area {
+  resize: none;
+  font-family: "PT Serif", serif;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  border: 1px solid black;
+  margin: 16px 0;
+  height: 300px;
+  width: 700px;
+  overflow-wrap: anywhere;
+}
