--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,25 @@
   align-items: center;
   background-color: #f5f5f5;
   border: 1px solid black;
-  margin: 16px 0;
+  margin: 32px auto;
   height: 300px;
   width: 700px;
   overflow-wrap: anywhere;
+}
+
+#spg {
+  display: flex;
+  justify-content: center;
+  margin: 32px auto;
+}
+
+#generate {
+  display: flex;
+  justify-content: center;
+  margin: 32px auto;
+  background-color: red;
+  color: white;
+  border-radius: 100px;
+  padding: 10px 11px;
+  font-size: 15px;
 }
